force-app/main/default/objects/AccountAreaSales__c/fields/SalesOfficeTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeTxt__c</fullName>
    <label>Escritório de vendas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0010</fullName>
            </value>
            <value>
                <fullName>0020</fullName>
            </value>
            <value>
                <fullName>0030</fullName>
            </value>
            <value>
                <fullName>0040</fullName>
            </value>
            <value>
                <fullName>0050</fullName>
            </value>
            <value>
                <fullName>0060</fullName>
            </value>
            <value>
                <fullName>0070</fullName>
            </value>
            <value>
                <fullName>0090</fullName>
            </value>
            <value>
                <fullName>0100</fullName>
            </value>
            <value>
                <fullName>0110</fullName>
            </value>
            <value>
                <fullName>0120</fullName>
            </value>
            <value>
                <fullName>0130</fullName>
            </value>
            <value>
                <fullName>0150</fullName>
            </value>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0160</fullName>
            </value>
            <value>
                <fullName>PL10</fullName>
            </value>
            <value>
                <fullName>PL20</fullName>
            </value>
            <value>
                <fullName>PL30</fullName>
            </value>
            <value>
                <fullName>PL40</fullName>
            </value>
            <value>
                <fullName>PL50</fullName>
            </value>
            <value>
                <fullName>PL55</fullName>
            </value>
            <value>
                <fullName>PL60</fullName>
            </value>
            <value>
                <fullName>PL65</fullName>
            </value>
            <value>
                <fullName>PL70</fullName>
            </value>
            <value>
                <fullName>PL95</fullName>
            </value>
            <value>
                <fullName>PL99</fullName>
            </value>
            <value>
                <fullName>0140</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>