force-app/main/default/objects/AccountAreaSales__c/fields/SalesOrgAccFml__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgAccFml__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; AccountNameFml__c, &quot;&quot;, &apos;_self&apos;) &amp; 

HYPERLINK(&quot;/&quot; &amp; Id, TEXT(CodeSalesOrganizationTxt__c) &amp; &apos; - &apos; &amp;  AccountNameFml__c, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org. Vendas - Conta</label>
    <type>Text</type>
</CustomField>