force-app/main/default/objects/AccountAreaSales__c/fields/SalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationTxt__c</fullName>
    <label>Descrição organização de vendas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMANCO</fullName>
            </value>
            <value>
                <fullName>PLASTUBOS</fullName>
            </value>
            <value>
                <fullName>BIDIM</fullName>
            </value>
            <value>
                <fullName>ALPHAGARY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>