force-app/main/default/objects/AccountAreaSales__c/fields/SAPCodeFml__c.field-meta.xml
<CustomField>
    <fullName>SAPCodeFml__c</fullName>
    <formula>AccountLkp__r.CodeCustomerTxt__c</formula>
    <label>Cód. R3</label>
    <type>Text</type>
</CustomField>