force-app/main/default/objects/AccountAreaSales__c/fields/SAPCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>SAPCodeTxt__c</fullName>
    <label>Código da Conta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>