force-app/main/default/objects/AccountAreaSales__c/fields/ShortNameFml__c.field-meta.xml
<CustomField>
    <fullName>ShortNameFml__c</fullName>
    <formula>AccountLkp__r.ShortNameTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Fantasia</label>
    <type>Text</type>
</CustomField>