force-app/main/default/objects/AccountAreaSales__c/fields/TradeCreditNmb__c.field-meta.xml
<CustomField>
    <fullName>TradeCreditNmb__c</fullName>
    <label>Crédito Trade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>