force-app/main/default/objects/AccountAreaSales__c/recordTypes/Amanco.recordType-meta.xml
<RecordType>
    <fullName>Amanco</fullName>
    <active>true</active>
    <label>Cliente Amanco</label>
</RecordType>