force-app/main/default/objects/AccountAreaSales__c/recordTypes/Bidim.recordType-meta.xml
<RecordType>
    <fullName>Bidim</fullName>
    <active>true</active>
    <label>Cliente Bidim</label>
</RecordType>