force-app/main/default/objects/AccountAreaSales__c/recordTypes/Competition.recordType-meta.xml
<RecordType>
    <fullName>Competition</fullName>
    <active>true</active>
    <label>Cliente Concorrência</label>
</RecordType>