force-app/main/default/objects/AccountAreaSales__c/recordTypes/Duraline.recordType-meta.xml
<RecordType>
    <fullName>Duraline</fullName>
    <active>true</active>
    <label>Cliente Duraline</label>
</RecordType>