force-app/main/default/objects/AccountAreaSales__c/recordTypes/Plastubos.recordType-meta.xml
<RecordType>
    <fullName>Plastubos</fullName>
    <active>true</active>
    <label>Cliente Plastubos</label>
</RecordType>